--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "tsc": "next typegen && tsc --noEmit"
   },
   "dependencies": {
     "react": "19.1.0",
